FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20230430:
AUTHOR: zirias@FreeBSD.org

  USES=magick has been updated based on flavorized ports.

  A new argument 'x11' is available to specifically depend on the flavor
  with X11 support. Fallback to DEFAULT_VERSIONS now happens
  independently for the version (currently 6 or 7) and the flavor
  (currently x11 or nox11).

  Only use arguments for version or flavor if your port really requires
  it. Also, there is no need to add options for selecting the -nox11
  flavor any more, as the user setting in DEFAULT_VERSIONS will be
  honored.

20230111:
AUTHOR: vishwin@FreeBSD.org

  USE_PYTHON=pep517 has been added to facilitate building using the
  new format.

  USE_PYTHON=pep517 takes no arguments. Operation is similar to
  USE_PYTHON=distutils, although the build backend specified in
  pyproject.toml shall be specified in BUILD_DEPENDS.

  A usage guide and implementation primer is available at:
        https://wiki.freebsd.org/Python/PEP-517

20221217:
AUTHOR: tcberner@FreeBSD.org

  USES=llvm has been added to more easily depend on llvm.

  USES=llvm supports two kinds of arguments:

  * mode
	<none>:	defaults to build
	build:	add a BUILD_DEPENDS on chosen llvm-port
	run:	add a RUN_DEPENDS on chosen llvm-port
	lib:	add a LIB_DEPENDS on chosen llvm-port

  * version
	<none>:		defaults to ${LLVM_DEFAULT}
	number:		use explicitly the specified version
	min=number:	use specified min if ${LLVM_DEFAULT} is lower
	max=number:	use specified max if ${LLVM_DEFAULT} is higher

  An example usage might be:
	USES=	llvm
  or
	USES=	llvm:13,build
  or
	USES=	llvm:min=14,lib
